--- a/sick-fits/backend/.vscode/settings.json
+++ b/sick-fits/backend/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#FF2C70",
-    "titleBar.inactiveBackground": "#FF2C70CC"
+    "titleBar.activeBackground": "#a70437",
+    "titleBar.inactiveBackground": "#85072fcc"
   }
 }
